<resources>
    <string name="app_name">DUI Instant Attorney Admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bailbonds">Bail Bonds</string>
    <string name="title_police">Police</string>
    <string name="title_law_offices">Law Offices</string>
    <string name="title_quick_contacts">Quick Contacts</string>
    <string name="title_chat">Chat</string>

    <string name="attorney_phone">+40762142464</string>
    <string name="attorney_email">bandeban@gmail.com</string>


    <string name="hint_enter_a_push_message">Type a push message…</string>

    <string name="hint_enter_a_message">Type a message…</string>
    <string name="send_push_notifications">Send Push Notifications</string>
    <string name="send_notifications_chat"><![CDATA[Send notifications & Chat]]></string>
    <string name="start_chat">Start Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
